<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="24dp"
        android:text="@string/remind_me_after"
        app:layout_constraintBottom_toTopOf="@+id/input_minutes"
        app:layout_constraintEnd_toEndOf="@+id/input_minutes"
        app:layout_constraintStart_toStartOf="@+id/input_minutes" />

    <EditText
        android:id="@+id/input_minutes"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="380dp"
        android:background="@drawable/input_number"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/minutes_init"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.543"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView

        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/minute_s"
        app:layout_constraintEnd_toEndOf="@+id/input_minutes"
        app:layout_constraintStart_toStartOf="@+id/input_minutes"
        app:layout_constraintTop_toBottomOf="@+id/input_minutes" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="280dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginBottom="188dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.089" />

</androidx.constraintlayout.widget.ConstraintLayout>