<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.appcompat.widget.LinearLayoutCompat xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".pages.NewTaskActivity">


        <EditText
            android:id="@+id/input_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:autofillHints="title"
            android:background="@drawable/input_borders"
            android:contentDescription="@string/input_for_title"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="15dp"
            tools:ignore="ContentDescription" />


        <EditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:autofillHints="description"
            android:background="@drawable/input_borders"
            android:contentDescription="@string/input_for_description"
            android:ems="10"
            android:hint="@string/input_for_description"
            android:inputType="textMultiLine"
            android:padding="15dp"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/color_bar"
            android:orientation="horizontal"
            android:padding="3dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_red"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/color_bar_buttons_start"
                android:backgroundTint="#f00"
                android:clickable="true"
                android:contentDescription="@string/color_for_task_card"
                android:focusable="true"
                android:src="@drawable/baseline_check_24"

                />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_green"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#0f0"
                android:clickable="true"
                android:contentDescription="@string/color_for_task_card"
                android:focusable="true" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_blue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00f"
                android:clickable="true"
                android:contentDescription="@string/color_for_task_card"
                android:focusable="true" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_yellow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/color_bar_buttons_end"
                android:backgroundTint="#ff0"
                android:clickable="true"
                android:contentDescription="@string/color_for_task_card"
                android:focusable="true" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageButton
                android:id="@+id/btn_camera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:contentDescription="@string/capture_image_from_camera"
                android:src="@drawable/baseline_camera_alt_24" />

            <ImageButton
                android:id="@+id/btn_notif"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_border"
                android:contentDescription="@string/set_notification_delay"
                android:src="@drawable/baseline_notifications_none_24" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chk_isDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/is_done" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/button_border"
            android:padding="15dp"
            android:text="@string/save_task"
            android:textColor="@color/white" />

        <RelativeLayout
            android:id="@+id/rl_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_pic"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:contentDescription="@string/task_pic"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageButton
                android:id="@+id/btn_image_delete"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignEnd="@id/img_pic"
                android:layout_alignBottom="@id/img_pic"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:backgroundTintMode="src_over"
                android:contentDescription="@string/delete_task_image"
                android:src="@drawable/baseline_delete_24" />

        </RelativeLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>